fix Gap on main cards

--- a/style.css
+++ b/style.css
@@ -146,6 +146,10 @@ input {
     gap: 25px;
 }
 
+.cardGrid > .grid {
+    gap: 8px;
+}
+
 .cardGrid > .grid :nth-child(2) {
     color: gray;
 }
